--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Hairstylist - Luxury Hair Studio</title>
+    <title>Capriccio Hair Salon - Luxury Hair Studio</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Google Font: Inter (Modern and Clean) -->
@@ -51,13 +51,18 @@
     <header class="bg-card-bg sticky top-0 z-20 border-b border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#home" class="text-3xl font-extrabold tracking-wider text-white">
-                ALEX <span class="text-gold-accent">HAIRSTYLIST</span>
+                CAPRICCIO <span class="text-gold-accent">HAIR SALON</span>
             </a>
-            <nav class="hidden md:flex space-x-10 text-sm font-medium">
+            <nav class="hidden md:flex space-x-10 text-sm font-medium items-center">
                 <a href="#services" class="text-gray-400 hover:text-gold-accent transition duration-150">Services</a>
                 <a href="#gallery" class="text-gray-400 hover:text-gold-accent transition duration-150">Gallery</a>
                 <a href="#location" class="text-gray-400 hover:text-gold-accent transition duration-150">Location</a>
-                <a href="mailto:booking@alexhairstylist.com" class="gold-button px-5 py-2 rounded-lg text-sm">Book Now</a>
+                <!-- New Call Button -->
+                <a href="tel:+15198239038" class="text-gold-accent border border-gold-accent px-3 py-2 rounded-lg hover:bg-gray-800 transition duration-150 flex items-center space-x-2">
+                    <i class="ph ph-phone text-lg"></i>
+                    <span>Call Us</span>
+                </a>
+                <a href="mailto:booking@capricciohairsalon.com" class="gold-button px-5 py-2 rounded-lg text-sm">Book Now</a>
             </nav>
             <button class="md:hidden text-white focus:outline-none" onclick="document.getElementById('mobile-menu').classList.toggle('hidden')">
                 <i class="ph ph-list text-3xl"></i>
@@ -69,7 +74,8 @@
                 <a href="#services" class="block w-full text-center py-2 text-base font-medium text-gray-400 hover:text-gold-accent hover:bg-gray-800 rounded-md">Services</a>
                 <a href="#gallery" class="block w-full text-center py-2 text-base font-medium text-gray-400 hover:text-gold-accent hover:bg-gray-800 rounded-md">Gallery</a>
                 <a href="#location" class="block w-full text-center py-2 text-base font-medium text-gray-400 hover:text-gold-accent hover:bg-gray-800 rounded-md">Location</a>
-                <a href="mailto:booking@alexhairstylist.com" class="gold-button w-full mt-3 py-3 rounded-lg text-base">Book Now</a>
+                <a href="tel:+15198239038" class="block w-full text-center py-2 text-base font-medium text-gold-accent border border-gold-accent hover:bg-gray-800 rounded-md">Call: +1 519-823-9038</a>
+                <a href="mailto:booking@capricciohairsalon.com" class="gold-button w-full mt-3 py-3 rounded-lg text-base">Book Now</a>
             </div>
         </div>
     </header>
@@ -93,7 +99,7 @@
             <p class="text-xl text-gray-300 max-w-3xl mx-auto mb-12 font-light">
                 Redefining beauty and precision in hair artistry. Book an exclusive experience at Guelph's most elegant studio.
             </p>
-            <a href="mailto:booking@alexhairstylist.com" class="gold-button inline-block py-4 px-12 rounded-full text-lg">
+            <a href="mailto:booking@capricciohairsalon.com" class="gold-button inline-block py-4 px-12 rounded-full text-lg">
                 Reserve Your Appointment
             </a>
         </div>
@@ -151,7 +157,7 @@
                 </div>
             </div>
             
-            <a href="mailto:booking@alexhairstylist.com" class="gold-button inline-block py-3 px-10 rounded-full text-lg">
+            <a href="mailto:booking@capricciohairsalon.com" class="gold-button inline-block py-3 px-10 rounded-full text-lg">
                 View All Works & Book
             </a>
         </div>
@@ -166,15 +172,15 @@
             </div>
 
             <div class="grid md:grid-cols-2 gap-12 items-center">
-                <!-- Google Maps Embed -->
+                <!-- Google Maps Embed: Updated for 315 Woolwich St -->
                 <div class="rounded-xl overflow-hidden shadow-2xl h-[450px] md:h-[600px] w-full border-4" style="border-color: var(--gold-accent);">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.536979204099!2d-80.25203772393305!3d43.54359857110757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b8f84713a0e69%3A0x6a1651c6c5b966c5!2s31%20Macdonell%20St%2C%20Guelph%2C%20ON%20N1H%202Z4%2C%20Canada!5e0!3m2!1sen!2sca!4v1700000000000!5m2!1sen!2sca"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.288289569731!2d-80.2646249!3d43.5939766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b86566d8e09f5%3A0x815f4848d7d40e94!2s315%20Woolwich%20St%2C%20Guelph%2C%20ON%20N1H%203W4%2C%20Canada!5e0!3m2!1sen!2sca!4v1700000000000!5m2!1sen!2sca"
                         class="w-full h-full border-0"
                         allowfullscreen=""
                         loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"
-                        title="Location of Alex Hairstylist in Guelph">
+                        title="Location of Capriccio Hair Salon in Guelph">
                     </iframe>
                 </div>
                 
@@ -184,25 +190,28 @@
                         <i class="ph ph-map-pin text-gold-accent text-3xl mt-1"></i>
                         <div>
                             <p class="font-bold text-lg text-white">Our Address</p>
-                            <p class="text-gray-400">31 Macdonell St, Guelph, ON N1H 2Z4, Canada</p>
+                            <!-- Updated Address -->
+                            <p class="text-gray-400">315 Woolwich St, Guelph, ON N1H 3W4, Canada</p>
                         </div>
                     </div>
                     <div class="flex items-start space-x-4">
                         <i class="ph ph-phone-call text-gold-accent text-3xl mt-1"></i>
                         <div>
                             <p class="font-bold text-lg text-white">Call Us</p>
-                            <p class="text-gray-400"><a href="tel:+15195551234" class="hover:text-gold-accent transition">(519) 555-1234</a></p>
+                            <!-- Updated Phone Number -->
+                            <p class="text-gray-400"><a href="tel:+15198239038" class="hover:text-gold-accent transition">+1 519-823-9038</a></p>
                         </div>
                     </div>
                     <div class="flex items-start space-x-4">
                         <i class="ph ph-envelope-simple text-gold-accent text-3xl mt-1"></i>
                         <div>
                             <p class="font-bold text-lg text-white">Email Booking</p>
-                            <p class="text-gray-400"><a href="mailto:booking@alexhairstylist.com" class="hover:text-gold-accent transition">booking@alexhairstylist.com</a></p>
+                            <p class="text-gray-400"><a href="mailto:booking@capricciohairsalon.com" class="hover:text-gold-accent transition">booking@capricciohairsalon.com</a></p>
                         </div>
                     </div>
-                    <a href="mailto:booking@alexhairstylist.com" class="gold-button inline-block w-full text-center py-3 rounded-lg text-md mt-6">
-                        Book Your Exclusive Visit
+                    <!-- Dedicated Call Button for Mobile/Touch -->
+                    <a href="tel:+15198239038" class="gold-button inline-block w-full text-center py-3 rounded-lg text-md">
+                        <i class="ph ph-phone-call text-lg mr-2"></i> Call Now (+1 519-823-9038)
                     </a>
                 </div>
 
@@ -213,13 +222,13 @@
     <!-- Footer -->
     <footer class="bg-card-bg text-gray-400 py-8 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-xl font-bold mb-2">Alex <span class="text-gold-accent">Hairstylist</span></p>
+            <p class="text-xl font-bold mb-2">Capriccio <span class="text-gold-accent">Hair Salon</span></p>
             <p class="text-sm">Luxury Hair Studio located in Downtown Guelph.</p>
             <div class="flex justify-center space-x-6 mt-4">
                 <a href="#" class="text-gray-500 hover:text-gold-accent transition"><i class="ph ph-instagram-logo text-2xl"></i></a>
                 <a href="#" class="text-gray-500 hover:text-gold-accent transition"><i class="ph ph-facebook-logo text-2xl"></i></a>
             </div>
-            <p class="text-xs mt-6">&copy; 2024 Alex Hairstylist. All rights reserved.</p>
+            <p class="text-xs mt-6">&copy; 2024 Capriccio Hair Salon. All rights reserved.</p>
         </div>
     </footer>
 
